# polyfloat

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  MANIFEST.in  MARKET_DETAIL_PLAN.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  README.md  TUI_FIXES_SUMMARY.md  clob_traces_results.txt  develeopmentplan.md  discover_kalshi_ws.py  implementation_comparison.md  inspect_kalshi_config.py  inspect_kalshi_methods.py  inspect_kalshi_sig.py  inspect_market_fields.py  investigate_kalshi_data.py  list_kalshi_methods.py  mkdocs.yml  package-lock.json  pyproject.toml  repro_search_fail.py  repro_tui_env.py  scraper.py  test_balance.py  test_kalshi_limit.py  test_kalshi_markets_limit.py  test_tui_fixes.py  test_tui_phase1.py  validate_arb.py  verify_cli_logic.py  verify_cli_logic_env.py  verify_kalshi_charts.py  verify_kalshi_full.py  verify_kalshi_logic.py  verify_kalshi_metadata.py  verify_kalshi_safeguards.py  (+1 more)
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/core_trading_20251225/: metadata.json
conductor/archive/flatten_agents_struct_20251228/: metadata.json  plan.md  spec.md
conductor/tracks/agent_rebuild_20251229/: metadata.json  plan.md  spec.md
conductor/tracks/cli_flags_search_fix_20251225/: metadata.json  plan.md  spec.md
conductor/tracks/core_trading_20251225/: plan.md  spec.md
conductor/tracks/flatten_agents_struct_20251228/: metadata.json  spec.md
conductor/tracks/kalshi_auth_fix_20251227/: plan.md  spec.md
docs/: index.md
local_db_events/: events.json
scripts/: bump_version.py
src/: main.py
src/polycli/: cli.py  models.py  tui.css  tui.py  tui_agent_chat.py  tui_agent_panel.py  tui_news_feed.py  tui_sentinel.py  update.py
src/polycli/agents/: __init__.py  alert_manager.py  base.py  creator.py  executor.py  graph.py  market_correlation.py  market_observer.py  news_analysis.py  nodes.py  prompts.py  state.py  supervisor.py  trader.py
src/polycli/analytics/: __init__.py  calculator.py  models.py  store.py  widget.py
src/polycli/arbitrage/: detector.py  discovery.py  models.py  tui_widget.py
src/polycli/emergency/: __init__.py  controller.py  models.py  (+1 more)
tests/: quick_test.py  smoke_test_redis.py  test_agent_risk_integration.py  test_agent_system.py  test_agents.py  test_base_agent.py  test_base_provider.py  test_chroma_connector.py  test_cli_flags.py  test_emergency_stop.py  test_execution_path.py  test_executor_agent.py  test_kalshi_auth_flow.py  test_kalshi_provider.py  test_kalshi_ws.py  test_models.py  test_news_agents_implementation.py  test_news_connector.py  test_paper_trading.py  test_phase1.py  test_polymarket_provider.py  test_polymarket_search_comprehensive.py  test_polymarket_search_fix.py  test_polymarket_ws.py  test_prompter.py  test_providers.py  test_risk_context.py  test_risk_guard.py  test_search.py  test_search_connector.py  test_sentinel.py  test_specialist_agents.py  test_storage.py  test_telemetry.py  test_telemetry_integration.py  test_telemetry_perf.py  test_tool_registry.py  test_tui_agent_integration.py  test_tui_components.py  test_tui_integration.py  (+2 more)
(+58 files in other folders)
