[tool.poetry]
name = "polyfloat"
version = "0.1.0"
description = "Agentic CLI/TUI terminal for Polymarket and Kalshi"
authors = ["PolyCLI Team"]
license = "MIT"
readme = "README.md"
homepage = "https://docs.polycli.dev"
repository = "https://github.com/polycli/polycli"
keywords = ["polymarket", "kalshi", "prediction-markets", "trading", "cli", "langgraph"]
packages = [{include = "polycli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
click = "8.1.7"
rich = "^13.7.0"
textual = "^0.50.1"
py-clob-client = "^0.24.0"
kalshi-python = "^1.0.0"
httpx = ">=0.27.0"
websockets = ">=12.0"
langgraph = "^0.2.28"
langchain-google-genai = "^1.0.0"
langchain-core = ">=0.2.0"
pydantic = "^2.10.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
scipy = "^1.14.0"
redis = {extras = ["hiredis"], version = "^5.1.0"}
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
mypy = "^1.13.0"
ruff = "^0.8.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
poly = "polycli.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"