[tool.poetry]
name = "polyfloat"
version = "0.1.0"
description = "Agentic CLI/TUI terminal for Polymarket and Kalshi prediction markets"
authors = ["PolyCLI Team <amol@polycli.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://docs.polycli.dev"
repository = "https://github.com/AmolDerickSoans/polyfloat"
documentation = "https://docs.polycli.dev"
keywords = ["polymarket", "kalshi", "prediction-markets", "trading", "cli", "langgraph", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "polycli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
click = "8.1.7"
rich = "^13.7.0"
textual = "^0.50.1"
py-clob-client = "^0.24.0"
kalshi-python = "^1.0.0"
httpx = ">=0.27.0"
websockets = ">=12.0"
langgraph = "^0.2.28"
langchain-google-genai = "^1.0.0"
langchain-core = ">=0.2.0"
pydantic = "^2.10.0"
rapidfuzz = "^3.10.1"
pandas = "^2.2.0"
numpy = "^2.0.0"
scipy = "^1.14.0"
redis = {extras = ["hiredis"], version = "^5.1.0"}
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
mypy = "^1.13.0"
ruff = "^0.8.0"
pre-commit = "^4.0.0"
hypothesis = "^6.100.0"

[tool.poetry.scripts]
poly = "polycli.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"